objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device_Type_Report__c</fullName>
        <description>For reporting purposes</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Device_Comments__c</fullName>
        <label>Other Device Comments</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>